Add sign in button to the dashboard page and add feature flags to enable/disable compliance monitoring part of the site (#13)
* feat: add a feature flag to enable and disable the dynamic compliance reports

* feat: add sign in button and authorization to the dashboard

Also improve mock auth provider abilities for smoother testing.

* chore: prevent static analysis finding false redirect issues

Use a more explicit control flow to prevent static code analysis tools
finding a security flaw on the signin route when one does not exist.

---------

Co-authored-by: Fawaz Hussain <fh@localhost>

--- a/configs/default.yaml.example
+++ b/configs/default.yaml.example
@@ -11,6 +11,7 @@ app:
 auth:
   type: "oidc"  # Options: mock, oidc
   mock:
+    silent_login: false # Simulate silent logins with auth broker
     groups: []
   oidc:
     client_id: ""  # OIDC_CLIENT_ID
@@ -64,6 +65,7 @@ monitoring:
 # Feature Flags
 features:
   auth: false
+  compliance: true
 
 # Development Settings
 development:
